test(jinfer): simplify fixtures and execution